css: Avoid that toggle switches break onto a new line in minimal layout

--- a/modules/monitoring/public/css/module.less
+++ b/modules/monitoring/public/css/module.less
@@ -590,6 +590,7 @@ form.instance-features span.description, form.object-features span.description {
 .object-features {
   .control-label-group {
     text-align: left;
+    margin-right: 0;
     width: @name-value-table-name-width;
 
     label {
