--- a/public/css/icinga/forms.less
+++ b/public/css/icinga/forms.less
@@ -52,7 +52,6 @@ form.icinga-form {
 
     .control-label-group {
       text-align: left;
-      width: 100%;
       padding-bottom: 0;
       padding-left: 0;
       margin-bottom: 0;
@@ -82,7 +81,7 @@ form.icinga-form .control-label-group {
   padding: .5625em .5625em .5625em 0;
   max-height: 2.5em;
   text-align: right;
-  width: @name-value-table-name-width;
+  width: 14em;
 }
 
 .icinga-controls .control-info {
